<resources>
    <string name="app_name">GithubUserFinal</string>
    <string name="html">HTML</string>
    <string name="name">Name</string>
    <string name="object_received">object_received</string>
    <string name="username_detail">Username Detail</string>
    <string name="name_detail">Name Detail</string>
    <string name="company_detail">Company Detail</string>
    <string name="location_detail">Location Detail</string>
    <string name="repository_detail">Repository Detail</string>
    <string name="followers_detail">Followers Detail</string>
    <string name="following_detail">Following Detail</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="location">Location</string>
    <string name="company">Company</string>
    <string name="repository">Repository</string>
    <string name="avatar">Avatar</string>
    <string name="octocat">octocat</string>
    <string name="zero">0</string>
    <string name="home">Home</string>
    <string name="setting">Setting</string>
    <string name="favorite">favorite</string>
    <string name="yaya">M19.14,12.94c0.04,-0.3 0.06,-0.61 0.06,-0.94c0,-0.32 -0.02,-0.64 -0.07,-0.94l2.03,-1.58c0.18,-0.14 0.23,-0.41 0.12,-0.61l-1.92,-3.32c-0.12,-0.22 -0.37,-0.29 -0.59,-0.22l-2.39,0.96c-0.5,-0.38 -1.03,-0.7 -1.62,-0.94L14.4,2.81c-0.04,-0.24 -0.24,-0.41 -0.48,-0.41h-3.84c-0.24,0 -0.43,0.17 -0.47,0.41L9.25,5.35C8.66,5.59 8.12,5.92 7.63,6.29L5.24,5.33c-0.22,-0.08 -0.47,0 -0.59,0.22L2.74,8.87C2.62,9.08 2.66,9.34 2.86,9.48l2.03,1.58C4.84,11.36 4.8,11.69 4.8,12s0.02,0.64 0.07,0.94l-2.03,1.58c-0.18,0.14 -0.23,0.41 -0.12,0.61l1.92,3.32c0.12,0.22 0.37,0.29 0.59,0.22l2.39,-0.96c0.5,0.38 1.03,0.7 1.62,0.94l0.36,2.54c0.05,0.24 0.24,0.41 0.48,0.41h3.84c0.24,0 0.44,-0.17 0.47,-0.41l0.36,-2.54c0.59,-0.24 1.13,-0.56 1.62,-0.94l2.39,0.96c0.22,0.08 0.47,0 0.59,-0.22l1.92,-3.32c0.12,-0.22 0.07,-0.47 -0.12,-0.61L19.14,12.94zM12,15.6c-1.98,0 -3.6,-1.62 -3.6,-3.6s1.62,-3.6 3.6,-3.6s3.6,1.62 3.6,3.6S13.98,15.6 12,15.6z</string>
    <string name="notification">notification</string>
    <string name="reminder">Reminder at 9.00AM</string>
    <string name="notification_title">Github User Search</string>
    <string name="notification_text">Lets be inspired in Github</string>
    <string name="reminder_off">reminder is off</string>
    <string name="reminder_on">Reminder is on</string>

</resources>